minor design changes on cards

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,7 +2,6 @@
   display: flex;
   font-size: small;
   margin: 10px 15vw;
-  border-radius: 10px;
-  border: 1px solid rgb(255, 255, 255);
+  border-radius: 15% 25px;
   overflow: hidden;
 }
