--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,7 +1,6 @@
 .card-total {
   display: flex;
-  font-size: small;
-  margin: 10px 15vw;
-  border-radius: 15% 25px;
+  margin: 10px 30vw 2vw 0;
+  border-radius: 25px 25px;
   overflow: hidden;
 }
