inputs done until creation of object

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,21 @@
-* {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Playfair Display", serif;
+}
 
+label {
   font-family: "Source Sans Pro", sans-serif;
 }
 
 li {
   list-style-type: none;
+}
+
+#color-role {
+  display: block;
+  width: 30%;
 }
