--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,3 +1,16 @@
+.delete-button {
+  position: relative;
+  border: initial;
+  border-radius: 15px;
+  font-size: 0.8rem;
+  padding: 7px 5px;
+  width: 30%;
+  height: 5%;
+  color: white;
+  background-color: #ff000080;
+  margin: 5px 0px 0px 0px;
+}
+
 .card-total {
   display: flex;
   margin: 10px 30vw 2vw 0;
